--- a/peter.html
+++ b/peter.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="hai">
+<body class="peter">
     <!-- <div class="header--sub container-fluid">
         <a href="#">Schedule your totally free consultant call!</a>
         <div class="header--sub-close">x</div>
@@ -71,44 +71,76 @@
 
     <section id="hero">
         <div class="hero--carousel">
-            <div class="hero--carousel-overlay">
-                <h1>What do you desire?</h1>
-                <p><span class="hero--carousel-typed">A last minute get away?</span></p>
-            </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>What do you desire?</h1>
+                </div>
                 <img src="./img/at-your-service/01.jpg" alt="">
             </div>
-            <!-- <div class="hero--carousel-item">
-                <img src="./img/at-your-service/02.jpg" alt="">
-            </div> -->
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>A last minute get away?</h1>
+                </div>
+                <img src="./img/at-your-service/02.jpg" alt="">
+            </div>
+            <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Or last second pick up? </h1>
+                </div>
                 <img src="./img/at-your-service/03.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Breakfast for two?</h1>
+                </div>
                 <img src="./img/at-your-service/04.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Or dinner for 200?</h1>
+                </div>
                 <img src="./img/at-your-service/05.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Need a rare cigar?</h1>
+                </div>
                 <img src="./img/at-your-service/06.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>A tune up for your watch?</h1>
+                </div>
                 <img src="./img/at-your-service/07.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Or your boat?</h1>
+                </div>
                 <img src="./img/at-your-service/08.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Need a place in London?</h1>
+                </div>
                 <img src="./img/at-your-service/09.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>or Beijing?</h1>
+                </div>
                 <img src="./img/at-your-service/11.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>or San Francisco?</h1>
+                </div>
                 <img src="./img/at-your-service/11.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
+                <div class="hero--carousel-content">
+                    <h1>Or that last minute tee time?</h1>
+                </div>
                 <img src="./img/at-your-service/12.jpg" alt="">
             </div>
         </div>
@@ -178,7 +210,7 @@
                 <span class="divider small"></span>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="membership--item">
                         <div class="membership--item-image">
                             <img src="./img/membership/card-sapphire.png" alt="">
@@ -202,7 +234,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="membership--item">
                         <div class="membership--item-image">
                             <img src="./img/membership/card-ruby.png" alt="">
@@ -226,7 +258,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="membership--item">
                         <div class="membership--item-image">
                             <img src="./img/membership/card-diamond.png" alt="">
@@ -250,8 +282,32 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="membership--item">
+                        <div class="membership--item-image">
+                            <img src="./img/membership/card-master.png" alt="">
+                        </div>
+                        <div>
+                            <div class="membership--item-info">
+                                <h2>Master Key</h2>
+                                <ul>
+                                    <li>No Request Fee</li>
+                                    <li>Master Monthly Care Package</li>
+                                    <li>World Wide Service</li>
+                                    <li>Private Club Access</li>
+                                </ul>
+                            </div>
+                            <!-- <div class="membership--item-fee">
+                                <span>$</span>10,000
+                            </div> -->
+                            <div class="membership--item-apply">
+                                <br><br>Invitation<br>Only
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="membership--item master">
+            <!-- <div class="membership--item master">
                 <div class="membership--item-image">
                     <img src="./img/membership/card-master.png" alt="">
                 </div>
@@ -266,7 +322,7 @@
                         Invitation<br>Only
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -342,33 +398,24 @@
         </div>
     </section>
 
-    <section id="private-club">
-        <div class="container row">
-            <div class="col-md-7 private-club--left">
-                <div class="content-top">
-                    <div class="section-title gold left">
-                        <h1>Private Club</h1>
-                        <h5>Lorem Ipsum Dolor Sit Amet</h5>
-                        <span class="divider gold double left small"></span>
-                    </div>
-                    <p>Dolor diam eirmod lorem vero duo erat amet vero duo erat amet kasd gubergren. Labore
-                        gubergren
-                        duo lorem est sanctus et diam kasd eirmod. Et dolor sanctus invidunt dolore diam sanctus.
-                        Labore
-                        takimata sadipscing ea eos rebum. No consetetur eirmod gubergren erat amet. Et.</p>
-                    <p>Dolor est sit amet no takimata accusam et diam diam sed. Ut clita stet est lorem gubergren
-                        amet
-                        kasd aliquyam,.</p>
-                </div>
-                <div class="content-bottom">
+    <section id="private-club-peter">
+        <div class="private-club-peter--carousel">
+            <div class="private-club-peter--carousel-overlay">
+                <div>
+                    <h1>Private Club</h1>
                     <h5>Coming Soon</h5>
-                    <p>Rebum no sea clita ea et ut lorem justo sanctus et, justo ipsum ipsum sadipscing sed vero amet
-                        accusam tempor clita.</p>
                 </div>
             </div>
-            <div class="col-md-5 private-club--right">
-                <img src="./img/private-club-01.jpg" alt="">
-            </div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
+            <div class="private-club-peter--carousel-item"></div>
         </div>
     </section>
 
@@ -435,16 +482,10 @@
         </div>
     </section>
 
-    <div id="redirect-peter" class="modal">
-        <p style="text-align: center;"><a href="peter.html" class="small-text"
-                style="border-bottom: 2px solid black; display: block; padding-bottom: .5rem;">Peter's revision</a></p>
-    </div>
-
     <!-- Javascript -->
 
     <script src="/js/jquery.js"></script>
     <script src="/js/jquery.typed.js"></script>
-    <script src="/js/jquery.modal.js"></script>
     <script src="/js/jquery.flickity.js"></script>
     <script src="/js/scrollreveal.js"></script>
     <script src="/js/app.js"></script>
