--- a/peter.html
+++ b/peter.html
@@ -87,67 +87,67 @@
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>A last minute get away?</h1>
+                    <!-- <h1>A last minute get away?</h1> -->
                 </div>
                 <img src="./img/at-your-service/02.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Or last second pick up? </h1>
+                    <!-- <h1>Or last second pick up? </h1> -->
                 </div>
                 <img src="./img/at-your-service/03.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Breakfast for two?</h1>
+                    <!-- <h1>Breakfast for two?</h1> -->
                 </div>
                 <img src="./img/at-your-service/04.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Or dinner for 200?</h1>
+                    <!-- <h1>Or dinner for 200?</h1> -->
                 </div>
                 <img src="./img/at-your-service/05.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Need a rare cigar?</h1>
+                    <!-- <h1>Need a rare cigar?</h1> -->
                 </div>
                 <img src="./img/at-your-service/06.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>A tune up for your watch?</h1>
+                    <!-- <h1>A tune up for your watch?</h1> -->
                 </div>
                 <img src="./img/at-your-service/07.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Or your boat?</h1>
+                    <!-- <h1>Or your boat?</h1> -->
                 </div>
                 <img src="./img/at-your-service/08.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Need a place in London?</h1>
+                    <!-- <h1>Need a place in London?</h1> -->
                 </div>
                 <img src="./img/at-your-service/09.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>or Beijing?</h1>
+                    <!-- <h1>or Beijing?</h1> -->
                 </div>
                 <img src="./img/at-your-service/10.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>or San Francisco?</h1>
+                    <!-- <h1>or San Francisco?</h1> -->
                 </div>
                 <img src="./img/at-your-service/11.jpg" alt="">
             </div>
             <div class="hero--carousel-item">
                 <div class="hero--carousel-content">
-                    <h1>Or that last minute tee time?</h1>
+                    <!-- <h1>Or that last minute tee time?</h1> -->
                 </div>
                 <img src="./img/at-your-service/12.jpg" alt="">
             </div>
